--- a/facebook.html
+++ b/facebook.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="pacote-d013/imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/gustavoguanabara/" target="_blank">Acesse</a>
+    <img src="pacote-d013/imagens/Tela-F.jpg" alt="Facebook">
+    <a href="https://www.facebook.com/profile.php?id=100007792572447" target="_blank">Acesse</a>
 </body>
 </html>
