--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="pacote-d013/imagens/tela-github.jpg" alt="Github">
-    <a href="https://github.com/professorguanabara" target="_blank">Acesse</a>
+    <img src="pacote-d013/imagens/Tela-GH.jpg" alt="Github">
+    <a href="https://github.com/JonathaDev01" target="_blank">Acesse</a>
 </body>
 </html>
