--- a/instagram.html
+++ b/instagram.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="pacote-d013/imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">Acesse</a>
+    <img src="pacote-d013/imagens/Tela-I1.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/jonathan_sylvva/" target="_blank">Acesse</a>
 </body>
 </html>
